--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <h1>STAR WARS</h1>
     <h3>Total de personajes: <span id="total"></span></h3>
  
-  <ul id="personajes">
-      
-  </ul>
+  <ul id="personajes"></ul>
+  <div id="DetallePlaneta"></div>
    
    <script src="assets/js/jquery-3.2.1.min.js"></script>
    <script src="assets/js/materialize.min.js"></script>
